# openclaw-docker-installer

./: .gitignore  AGENTS-ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-DECISIONS.md  LICENSE  MEMORY-ARCHITECTURE.md  README.md  ROADMAP.md  SECURITY-ARCHITECTURE.md  SECURITY.md  VM-TEST-SETUP.md  pyproject.toml  requirements.txt  run.bat  run.sh  run_tests.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml
docs/: install-notes.md  multi-agent-setup.md  openclaw-installer-notes.md  requirements-diff-2026-04-10.md  requirements-diff-v02.md  security-architecture.md  workspace-file-management.md
scripts/: clean.sh  commit_translations.py  test_cli.py  test_import.py  test_venv.py  test_wizard_import.py
skills/: README.md
skills-private/: README.md
src/: main.py
src/checks/: docker_check.py  gateway_check.py  python_check.py
src/generator/: backup_gen.py  compose_gen.py  cron_gen.py  env_gen.py  exec_approvals_gen.py  generator.py  openclaw_json_gen.py  restore_config_gen.py  restore_gen.py  workspace_bootstrap_gen.py
src/gui/: wizard.py
src/installer/: __init__.py  docker_start.py  logging_setup.py  systemd_gen.py  workspace_bootstrap.py
src/scripts/: add_agent.py
src/wizard/: __init__.py  state.py  ui.py  wizard.py
tasks/: .gitkeep
tests/: conftest.py  test_add_agent.py  test_backup_gen.py  test_compose_gen.py  test_docker_check.py  test_gateway_check.py  test_generators.py  test_python_check.py  test_workspace_bootstrap.py
(+56 files in other folders)
