[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-docker-installer"
version = "0.0.1"
description = "OpenClaw in a Box – cross-platform setup wizard"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "docker",
    "jinja2",
    "rich",
    "questionary",
    "psutil",
    "httpx",
    "platformdirs",
    "send2trash",
    "typer[all]",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
openclaw-installer = "main:app"

[tool.mypy]
exclude = ["src/installer/templates/"]
ignore_missing_imports = true

[tool.ruff]
exclude = ["src/installer/templates/"]
